Correção para retrocompatibilidade com Java 8